@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.3.0
 
+	- File chooser preview now recognizes utf8 encoded 
+	  text files (STR #2218)
 	- Empty functions in Fluid no longer create an
 	  implementation (STR #2259)
 	- Fixed Fluid dependency on X11 (STR #2261)
